--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.1",
     "react-hexgrid": "^1.0.3",
     "react-scripts": "4.0.1",
+    "recoil": "^0.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
